--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,13 @@
 title: futel.net
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://futel.net" # the base hostname & protocol for your site
+permalink: pretty
+paginate: 1
+paginate_path: "/blog/page:num/"
 
 # Build settings
 markdown: kramdown
 
-gems:
-  - jekyll-redirect-from
+plugins:
+  - jekyll-gist
+  - jekyll-paginate
